--- a/app/assets/stylesheets/Log.css
+++ b/app/assets/stylesheets/Log.css
@@ -5,8 +5,8 @@
     bottom:0;
     left:0;
     right:0;
-    background:url("../images/login-bg2.jpg")no-repeat center black;
-    /*background:url("/assets/login-bg2.jpg")no-repeat center black;*/
+    /*background:url("../images/login-bg2.jpg")no-repeat center black;*/
+    background:url("/assets/login-bg2.jpg")no-repeat center black;
 }
 .log-btn{
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0.35);
