--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -169,7 +169,7 @@
 </div>
 
  <div class="dashboard-content-full" id="dashboard-content-full">
-   <div id="dash-fullsize" class="gridster">
+   <div id="dash-fullsize" class="gridster black">
      <ul class="dashBoard-show" id="dashBoard-show-full">
 
      </ul>
