--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -36,12 +36,14 @@
 }
 html{
     height:100%;
+    width:100%;
 }
 body{
     /*height:100%;*/
     margin:0;
     font-weight:500;
     font-family:"open-sans";
+    width:100%;
 }
 /*********************************************************************************************************左边用户设置部分
 *******************************************************************************************************************/
@@ -69,7 +71,7 @@ body{
 /********************************************************************************************************* 右边主内容区
 *******************************************************************************************************************/
 .wrap-main{
-    min-width:900px;
+    min-width:600px;
     position:absolute;
     transition:left 0.25s ease-out;
     right:0;
