--- a/app/assets/stylesheets/Log.css
+++ b/app/assets/stylesheets/Log.css
@@ -4,9 +4,10 @@
     top:0px;
     bottom:0;
     left:0;
-    right:0;
-    /*background:url("../images/login-bg2.jpg")no-repeat center black;*/
-    background:url("/assets/login-bg2.jpg")no-repeat center black;
+    width:100%;
+    background:url("../images/login-bg2.jpg")no-repeat center black;
+    /*background:url("/assets/login-bg2.jpg")no-repeat center black;*/
+    /*min-width:580px;*/
 }
 .log-btn{
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0.35);
@@ -27,15 +28,15 @@
 }
 .login-caption{
     position:absolute;
-    width:800px;
-    margin-left:-400px;
+    width:580px;
+    margin-left:-290px;
     left:50%;
     top:13%;
     color:white;
 
 }
 .login-caption h3{
-    font-size:70px;
+    font-size:50px;
     text-shadow:3px 2px 5px #444;
     padding-bottom:15px;
     border-bottom:3px solid white;
