--- a/app/assets/stylesheets/Log.css
+++ b/app/assets/stylesheets/Log.css
@@ -5,8 +5,8 @@
     bottom:0;
     left:0;
     width:100%;
-    background:url("../images/login-bg2.jpg")no-repeat center black;
-    /*background:url("/assets/login-bg2.jpg")no-repeat center black;*/
+    /*background:url("../images/login-bg2.jpg")no-repeat center black;*/
+    background:url("/assets/login-bg2.jpg")no-repeat center black;
     /*min-width:580px;*/
 }
 .log-btn{
