--- a/app/views/kpis/_new.html.erb
+++ b/app/views/kpis/_new.html.erb
@@ -13,8 +13,8 @@
                </select>
           </div>
 
-          <input type="text" placeholder="* 目标上限值" id="new-kpi-target"/>
-          <input type="text" placeholder="* 目标下限值" id="new-kpi-target-low"/>
+          <input type="text" placeholder="* <%= t 'manage.kpi.target'%>" id="new-kpi-target"/>
+          <input type="text" placeholder="* <%= t 'manage.kpi.target_min'%>" id="new-kpi-target-low"/>
           <div class="select-div">
                <select class="chosen-select" data-placeholder="* <%= t 'manage.kpi.unit'%>" id="add-unit" name="unit">
                    
