--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -218,8 +218,8 @@
     padding-top:20px;
 }
 .index-statistics>.inner{
-    width:580px;
-    margin:0 auto;
+    /*width:580px;*/
+    /*margin:0 auto;*/
 
 }
 .index-statistics>.inner:after{
@@ -232,7 +232,7 @@
     float:left;
     height:220px;
     position:relative;
-    margin-left:120px;
+    margin-left:100px;
 }
 
 .index-statistics>.inner>.item>canvas{
@@ -240,15 +240,15 @@
     top:20px;
 }
 .index-statistics>.inner>.item:first-of-type{
-    width:100px;
-    margin-left:40px;
+    width:180px;
+    /*margin-left:40px;*/
 }
 .index-statistics>.inner>.item:first-of-type>canvas{
-    left:60px;
+    left:70px;
 }
 .index-statistics>.inner>.item:nth-of-type(2){
-    width:140px;
-    margin-left:160px;
+    width:240px;
+    /*margin-left:160px;*/
 }
 .index-statistics>.inner>.item:nth-of-type(2)>canvas{
     left:0px;
