--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -229,8 +229,10 @@
 }
 .index-statistics>.inner>.item{
     width:220px;
-    float:left;
+    /*float:left;*/
     height:220px;
+    left:50%;
+
     position:relative;
     margin-left:100px;
 }
@@ -240,18 +242,21 @@
     top:20px;
 }
 .index-statistics>.inner>.item:first-of-type{
-    width:180px;
+    width:200px;
+    margin-left:-100px;
     /*margin-left:40px;*/
 }
 .index-statistics>.inner>.item:first-of-type>canvas{
     left:70px;
 }
 .index-statistics>.inner>.item:nth-of-type(2){
-    width:240px;
+    width:200px;
+    margin-left:-100px;
+    margin-bottom:10px;
     /*margin-left:160px;*/
 }
 .index-statistics>.inner>.item:nth-of-type(2)>canvas{
-    left:0px;
+    left:60px;
 }
 
 .index-statistics>.inner>.item>label{
