--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -243,7 +243,8 @@
 }
 .index-statistics>.inner>.item:first-of-type{
     width:200px;
-    margin-left:-100px;
+    margin-left:-200px;
+    margin-bottom:100px;
     /*margin-left:40px;*/
 }
 .index-statistics>.inner>.item:first-of-type>canvas{
@@ -251,7 +252,7 @@
 }
 .index-statistics>.inner>.item:nth-of-type(2){
     width:200px;
-    margin-left:-100px;
+    margin-left:-200px;
     margin-bottom:10px;
     /*margin-left:160px;*/
 }
