--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -231,7 +231,7 @@
     width:220px;
     float:left;
     height:120px;
-
+    margin-top:30px;
 
     position:relative;
 
@@ -244,7 +244,7 @@
 .index-statistics>.inner>.item:first-of-type{
     width:200px;
     margin-bottom:20px;
-    margin-left:20px;
+    margin-left:35px;
 }
 .index-statistics>.inner>.item:first-of-type>canvas{
     left:10px;
@@ -252,7 +252,7 @@
 .index-statistics>.inner>.item:nth-of-type(2){
     width:170px;
     margin-bottom:20px;
-    margin-left:85px;
+    margin-left:110px;
 }
 .index-statistics>.inner>.item:nth-of-type(2)>canvas{
     left:00px;
