--- a/app/views/shares/_locale.html.erb
+++ b/app/views/shares/_locale.html.erb
@@ -16,7 +16,12 @@
               if(data.result){
                   $("#select-language>span").attr("lan",value);
                   $("#select-language>span").text(text).attr("value",value);
-                  window.location = data.content;
+                  if(data.content === ''){
+                      window.location = '/welcome'
+                  }else
+                  {
+                      window.location = data.content;
+                  }
               }
           });
       }
