--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -96,9 +96,9 @@
 /*full size dashboard*/
 .dashboard-content-full{
     position:absolute;
+    padding-top:10px;
     top:0px;
     right:0px;
-    bottom:0px;
     left:0px;
     z-index:99;
     background-color:#222;
