--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -96,7 +96,7 @@
 /*full size dashboard*/
 .dashboard-content-full{
     position:absolute;
-    padding-top:10px;
+    /*padding-top:10px;*/
     top:0px;
     right:0px;
     left:0px;
