--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -119,12 +119,14 @@
     text-align:center;
     font-size:21px;
     position:absolute;
-    top:5%;
     left:0px;
     right:0px;
     word-break:break-all;
     word-wrap:break-word;
-    color:#9cdd00
+    color:#9cdd00;
+    height:118px;
+    margin-top:-9px;
+    top:30%;
 }
 .full-size-btn{
     height: 18px;
