--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -123,7 +123,7 @@
     right:0px;
     word-break:break-all;
     word-wrap:break-word;
-    color:#9cdd00;
+    color:#fff;
     height:18px;
     margin-top:-9px;
     top:10%;
