change full size logo

--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -106,7 +106,7 @@
     /*应该注释掉下面这两个background*/
     background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
     background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
-    display:none;
+    /*display:none;*/
 }
 .grister-logo{
     position:relative;
@@ -115,27 +115,31 @@
     /*background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);*/
     /*background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);*/
 }
+.full-size-title{
+    padding-left:20px;
+    padding-top:10px;
+    height:35px;
+}
+.full-size-title:after{
+    content:"";
+    display:"block";
+    clear:both;
+}
 .full-size-label{
     text-align:center;
-    font-size:33px;
-    position:absolute;
-    left:0px;
-    right:0px;
+    font-size:38px;
+    font-weight:lighter;
     word-break:break-all;
     word-wrap:break-word;
     color:#fff;
-    height:18px;
-    margin-top:-9px;
-    top:10%;
     font-family:"helve";
+    display:inline-block;
+    float:left;
+    max-width:80%;
 }
 .full-size-btn{
-    height: 18px;
-    margin-top: -9px;
-    position: absolute;
-    top: 50%;
-    left:10px;
-    right:10px;
+    width:100px;
+    float:left;
     background:#222;
     color:#fff;
 }
