change full size logo

--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -106,7 +106,7 @@
     /*应该注释掉下面这两个background*/
     background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
     background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
-    /*display:none;*/
+    display:none;
 }
 .grister-logo{
     position:relative;
