--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -171,7 +171,7 @@
  <div class="dashboard-content-full" id="dashboard-content-full">
    <div id="full-size-title" class="full-size-title">
      <p class="full-size-label"></p>
-     <a id="full-size-btn" class="btn full-size-btn">退出全屏</a>
+     <a id="full-size-btn" class="btn full-size-btn"><%= t 'dashboard_group.base.restore'%></a>
    </div>
    <div id="dash-fullsize" class="gridster black">
      <ul class="dashBoard-show" id="dashBoard-show-full">
