--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -49,7 +49,7 @@
   </nav>
   <ul class="nav-user-part">
     <li>
-      <i class="icon-user" title="<%= current_user.first_name %>">  <%= current_user.first_name %></i>
+      <i class="icon-user" title="<%= current_user.first_name %>">  </i>
     </li>
     <%= render partial: 'shares/locale' %>
     <li class='empty'><a>
