--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -136,7 +136,7 @@
           <table class="chart-type-alternate" id="chart-type-alternate"  my_height="70">
                <tr>
                     <td class="analytics-chart-line image" type="line">
-                    <p style="display:none">
+                    <p style="display:block">
                          Line
                     </p></td>
                     <td class="analytics-chart-column" type="column">
