--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -1,9 +1,9 @@
 <div>
      <div class="analytics-condition clearfix" id="analytics-condition">
-          <div class="analytics-mark pull-left">
+          <div class="analytics-mark pull-left" style="width:124px;">
                <h2 class="normal-blue text-center pointer" onclick="analytic_control_condition_visible()"><%= t 'analytics.title'%></h2>
           </div>
-          <div class="pull-left analytics-condition-choose">
+          <div class="pull-left analytics-condition-choose" style="padding: 18px 0 5px 11px;">
                <div class="index-condition-group">
                     <select data-placeholder="<%= t 'analytics.kpi_category'%> *" style="width:130px;" class="chosen-select"   title="analy-entity-select" id="chart-group">
                          <%@categories.each_with_index do |catetory,i|%>
