change kpii entry menu a & upload

--- a/app/assets/stylesheets/Entry.css
+++ b/app/assets/stylesheets/Entry.css
@@ -35,7 +35,7 @@
 .entry-left-menu li{
     text-align:center;
     color:rgba(0,0,0,0.2);
-    padding:8px 24px;
+
     cursor:pointer;
     transition:color 0.2s ease-out;
     position:relative;
@@ -54,6 +54,10 @@
 .entry-left-menu li.active a{
     pointer-events:none;
     color:rgba(0,0,0,0.65);
+}
+.entry-left-menu li a{
+    padding:8px 24px;
+    display:block;
 }
 /********************************************************************************************************* 右边
 *******************************************************************************************************************/
@@ -232,6 +236,16 @@
     margin-top:15px;
     width:100px;
     float:right;
+}
+.upload-kpi .upload-parsing{
+    display:inline-block;
+    font-size:13px;
+    width:130px;
+    background:#E6F4F9;
+    color:#4D8796;
+    padding:6px 5px;
+    margin-left:20px;
+    margin-top:15px;
 }
 
 
