--- a/app/views/kpi_entries/new.html.erb
+++ b/app/views/kpi_entries/new.html.erb
@@ -42,6 +42,7 @@
     <div class="content">
         <%= render 'shares/file_upload'%>
     </div>
+    <p class="upload-parsing" id="parsing-load">正在解析文件...</p>
     <div class="btn upload-finish" id="upload-kpi-finish">完成</div>
   </div>
 </div>
