--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -21,7 +21,7 @@
 
         <aside class="content-right-nav" name='dashboard' id="content-right-nav">
             <div style="width:auto;height:71px;"></div>
-            <section class="adaptable" style="height:290px;overflow-y:auto">
+            <section class="adaptable" style="max-height:290px;overflow-y:auto">
                 <h3><%= t 'dashboard_group.group.name' %></h3>
                 <i class="icon-plus" id="content-right-nav-add-button"></i>
                 <ul id="content-right-nav-group">
