--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -43,7 +43,7 @@
 <script type="text/javascript">
   function fullsize(){
       ifepm.dashboard_widget.init_fullsize();
-      on_full_size();
+      //on_full_size();
       //console.log("fullsize");
   }
 
