dashboard full-size

--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -108,6 +108,10 @@
     background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
     display:none;
 }
+.dashboard-fullsize-bg{
+    background: -moz-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
+    background: -webkit-radial-gradient(  #009bb5 10%, #0080a3 40%, #003a79 80%);
+}
 .grister-logo{
     position:relative;
 }
