dashboard full-size

--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -54,12 +54,13 @@
       DASHBOARD.init();
       right_nav_main.init();
       $("#dashboard-content-full").css("display","block");
-      var height=$(document).height();
-      $("#dashboard-content-full").css("height",height+"px").css("background","none");
-      $("#dash-fullsize").addClass("dashboard-fullsize-bg");
       //DASHBOARD.add.init();
       current_dashboard_id = $("#dashboard-content-full").attr("dashboard-id");
       select_dashboard(current_dashboard_id,fullsize);
       current_dashboard_name = $("#dashboard-content-full").attr("dashboard-name");
+      window.setTimeout(function(){
+          var height=$(document).height();
+          $("#dashboard-content-full").css("height",height+"px");
+      },100)
   });
 </script>
