--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -46,6 +46,11 @@
   function fullsize(){
       ifepm.dashboard_widget.init_fullsize();
       on_full_size();
+//      $("#dash-fullsize").height()
+//      window.setTimeout(function(){
+//          var height=$(document).height();
+//          $("#dashboard-content-full").css("height",height+"px");
+//      },1000)
       //console.log("fullsize");
   }
 
@@ -58,9 +63,6 @@
       current_dashboard_id = $("#dashboard-content-full").attr("dashboard-id");
       select_dashboard(current_dashboard_id,fullsize);
       current_dashboard_name = $("#dashboard-content-full").attr("dashboard-name");
-      window.setTimeout(function(){
-          var height=$(document).height();
-          $("#dashboard-content-full").css("height",height+"px");
-      },100)
+
   });
 </script>
