--- a/app/views/layouts/pure.html.erb
+++ b/app/views/layouts/pure.html.erb
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>IFEpm</title>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<%= yield %>
-</body>
-<%= yield :javascript_includes%>
-<script type="text/javascript">
-</script>
+     <head>
+          <title>IFEpm</title>
+          <%= javascript_include_tag "jquery-1.8.2.min.js"%>
+          <%= javascript_include_tag "wayne-base.js"%>
+           <%= javascript_include_tag "i18n.js"%>
+           <%= javascript_include_tag "i18n/translations.js"%>
+          <%= csrf_meta_tags %>
+     </head>
+     <body>
+          <%= yield %>
+     </body>
+     <%= yield :javascript_includes%>
+     <script type="text/javascript"></script>
 </html>
